--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -62,6 +62,34 @@ msgid "Time between checks (seconds)"
 msgstr ""
 
 msgctxt "#30008"
+msgid "Action cancelled, {}"
+msgstr ""
+
+msgctxt "#30009"
+msgid "Client watching live tv"
+msgstr ""
+
+msgctxt "#30010"
+msgid "Client watching a recording"
+msgstr ""
+
+msgctxt "#30011"
+msgid "Recording about to start shortly"
+msgstr ""
+
+msgctxt "#30012"
+msgid "Active recording"
+msgstr ""
+
+msgctxt "#30013"
+msgid "Process {} running"
+msgstr ""
+
+msgctxt "#30014"
+msgid "Connection on port {}"
+msgstr ""
+
+msgctxt "#30018"
 msgid "Action cancelled, Background activities detected"
 msgstr ""
 
